--- a/serving/test.ipynb
+++ b/serving/test.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HOST=\"http://0.0.0.0:80\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
@@ -16,7 +25,7 @@
    "source": [
     "import requests\n",
     "\n",
-    "response = requests.get(\"http://0.0.0.0:80/health\")\n",
+    "response = requests.get(f\"{HOST}/health\")\n",
     "\n",
     "if response.status_code == 200:\n",
     "    data = response.json()\n",
@@ -54,7 +63,7 @@
     "image.save(image_bytes, format='JPEG')\n",
     "\n",
     "# Configura el URL de tu API. Reemplaza <dns-name-label> y <region> con los tuyos.\n",
-    "url = \"http://0.0.0.0:80/predict\"\n",
+    "url = f\"{HOST}/predict\"\n",
     "\n",
     "# Configura los datos de la imagen para la solicitud\n",
     "img_data = {\"image_file\": image_bytes.getvalue()}\n",
@@ -96,7 +105,7 @@
     "import io\n",
     "\n",
     "files = [('images', prepare_images('lavadora.jpg')), ('images', prepare_images('test.jpg'))]\n",
-    "url = \"http://0.0.0.0:80/predict_batch\"\n",
+    "url = f\"{HOST}/predict_batch\"\n",
     "response = requests.post(url, files=files)\n",
     "response = response.json()\n",
     "print(response)\n"
@@ -146,74 +155,6 @@
     "else:\n",
     "    print(\"Error en la solicitud. Código de estado:\", response.status_code)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.11.4 64-bit' requires ipykernel package.\n",
-      "Run the following command to install 'ipykernel' into the Python environment. \n",
-      "Command: '/opt/homebrew/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
-   "source": [
-    "## Ahora le pegamos a Azure\n",
-    "\n",
-    "import requests\n",
-    "from PIL import Image\n",
-    "import numpy as np\n",
-    "import io\n",
-    "\n",
-    "# Abre tu imagen\n",
-    "image = Image.open(\"/Users/matiassorozabal/Documents/ORT-ml-en-produccion/practico_6/img/plane.jpeg\")\n",
-    "\n",
-    "# Redimensionamos la imagen a 32x32\n",
-    "image = image.resize((32, 32))\n",
-    "\n",
-    "# Convertimos la imagen a un array de numpy y expandimos las dimensiones\n",
-    "image_np = np.expand_dims(np.array(image), axis=0)\n",
-    "\n",
-    "# Convertimos la imagen de numpy a bytes\n",
-    "image_bytes = io.BytesIO()\n",
-    "image.save(image_bytes, format='JPEG')\n",
-    "\n",
-    "# Configura el URL de tu API. Reemplaza <dns-name-label> y <region> con los tuyos.\n",
-    "url = \"http://52.188.171.27:8080/predict\"\n",
-    "\n",
-    "# Configura los datos de la imagen para la solicitud\n",
-    "img_data = {\"image_file\": image_bytes.getvalue()}\n",
-    "\n",
-    "# Haz una solicitud POST a la API con la imagen\n",
-    "response = requests.post(url, files=img_data)\n",
-    "\n",
-    "# Imprime la respuesta\n",
-    "print(response.json())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.11.4 64-bit' requires ipykernel package.\n",
-      "Run the following command to install 'ipykernel' into the Python environment. \n",
-      "Command: '/opt/homebrew/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
