--- a/serving/test.ipynb
+++ b/serving/test.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "HOST=\"http://20.171.16.221:8080\""
+    "HOST=\"http://20.171.16.221:8080\"\n",
+    "CLASSES=['CLEANING', 'DRINKS', 'FROZEN', 'PERFUMERY', 'TECHNOLOGY', 'WAREHOUSE']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
